  New Features:
  - Gas Exchange Connections now allow the =scale= keyword
  - Signal, ExternalData, and plot now accept the =reverse_time= keyword
  - Warnings are now written to the log file
- 0.14.2.2 May 1^{st} 2025, mostly  a bugfix release that adds isotope related unit test.
- 0.14.2.1 ESBMTK now requires python 3.12. Cleaned up repository structure. This may result in import errors. Please get in touch if it does. Reworked many class definitions to improve readability and documentation. Fixed a variety of regressions for isotope calculations that were introduces in 0.14.1.x  Added =debug= keyword to the Model object. Expanded the debug information in the equations file. The default solver has changed from BDF to LSODA.
- 0.14.1.4 Fixed a regression that caused incorrect =zcc= values in the post-processing step. Added  the =reverse_time= keyword to the plot function. This is most useful for models that run forward in time from past starting point.
- 0.14.1.x reworked the structure of the equations file, as well as the code that generates forcing functions. =scale_by_concentration= connections now correct for density. Both changes results in small changes to the numerical solutions. Also added link to the GMD publication describing the library.
- 0.14.0.x simplified the setup of the gas exchange connections, documentation improvements, =number_of_max_datapoints= keyword has been removed. Currently, this results in a huge memory demand for jobs that integrate over millions of years with small time steps (say 10 years)
- 0.13.0.8 added new testing framework, and 16 unit tests. Updated the documentation
- 0.13.0.7 the isotope fractionation factor has been renamed from =alpha= to =epsilon=
- 0.13.0.5 =tinmestep= keyword is now deprecated and should be replaced with =max_timestep=. =min_time_step= is now a configurable option.
- 0.13.0.x The equations file is now a temporary file with a random name. This allows for the parallel execution of model code.